--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,19 +3,23 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404 - Recurso no encontrado">
-  <main class="flex flex-col-reverse items-center justify-center h-full w-full lg:flex-row gap-6 p-4">
+  <main
+    class="flex flex-col-reverse items-center justify-center h-full w-full lg:flex-row gap-6 p-4"
+  >
     <!-- Sección de texto -->
     <article class="text-center lg:text-left lg:w-1/2 mt-auto mb-auto">
-      <h1 class="balance text-4xl lg:text-7xl font-bold">404 - Recurso no encontrado</h1>
-      <p class="font-bold text-lg lg:text-2xl mt-4 lg:w-11/12">
-        La ruta especificada no es válida, por favor verifíquela o vuelva a la
-      </p>
-      <a
-        class="font-bold text-2xl text-blue-600 underline underline-offset-3 decoration-[3px] transition-all inline-block rounded-lg hover:bg-blue-600 px-3 py-2 hover:text-white hover:shadow-xl mt-4"
-        href=""
-      >
-        ruta principal
-      </a>
+      <h1 class="balance text-4xl lg:text-7xl font-bold">
+        404 - Recurso no encontrado
+      </h1>
+        <p class="font-bold text-lg lg:text-2xl mt-4 lg:w-11/12">
+          La ruta especificada no es válida, por favor verifíquela o vuelva a el <a
+            class="font-bold text-2xl text-blue-600 underline underline-offset-3 decoration-[3px] transition-all inline-block rounded-lg hover:bg-blue-600 px-3 py-2 hover:text-white hover:shadow-xl"
+            href="/"
+          >
+            Inicio
+          </a>
+        </p>
+      </article>
     </article>
 
     <!-- Imagen -->
