--- a/src/components/Ayuda_y_Controles.astro
+++ b/src/components/Ayuda_y_Controles.astro
@@ -1,13 +1,13 @@
-<article>
+<article class="z-10 hidden sm:block">
   <a
-    class="help pt-3 lg:fixed text-sm lg:text-2xl"
+    class="help pt-3 fixed text-xl lg:text-2xl"
     target="_blank"
     href="https://n4chos-organization.gitbook.io/soft-share"
     >Ayuda & Documentación 📑</a
   >
   <button
     id="boton-mostrar-controles"
-    class="lg:fixed px-2 py-1 bg-slate-400/20 font-bold rounded-lg"
+    class="fixed px-2 py-1 bg-slate-400/20 font-bold rounded-lg"
     >Ver Atajos</button
   >
 
@@ -61,140 +61,134 @@
       </div>
     </div>
   </section>
-
-  <style>
-    #boton-mostrar-controles {
-      top: 4rem;
-      left: 0.5rem;
-      transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-      align-items: center;
-      border-radius: 6px;
-      color: rgba(0, 0, 0, 0.7);
-      border: none;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      text-decoration: none;
-      backdrop-filter: blur(10px);
-      &:hover {
-        color: black;
-        box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
-        text-decoration: underline;
-        text-decoration-thickness: 0.1em;
-        cursor: pointer;
-      }
-    }
-    a {
-      top: 0.5rem;
-      left: 0.5rem;
-      align-items: center;
-      font-weight: bold;
-      padding: 6px 14px;
-      border-radius: 6px;
-      color: var(--text-color);
-      border: none;
-      box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      transition: box-shadow 0.3s ease;
-      text-decoration: none;
-      backdrop-filter: blur(10px);
-
-      &:hover {
-        box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
-        text-decoration: underline;
-        text-decoration-thickness: 0.1em;
-        cursor: pointer;
-      }
-    }
-
-    @keyframes mostrar-controles {
-      0% {
-        opacity: 0;
-        
-        scale: .5;
-      }
-      100% {
-        opacity: 1; /* Cambia 100 a 1 */
-        scale: 1;
-        
-      }
-    }
-    @keyframes ocultar-controles {
-      0% {
-        opacity: 1;
-        pointer-events: auto; /* Mantiene la interacción */
-        
-      }
-      100% {
-        opacity: 0;
-        pointer-events: none; /* Evita interacción en estado oculto */
-        scale: 0;
-        
-      }
-    }
-
-    #ver-controles {
-      opacity: 0; /* Oculto inicialmente */
-    }
-
-    /* Creamos un elemento after para el elemento ver controles para que la animación de la sombra sera mejor */
-    #ver-controles::after {
-      content: "";
-      border-radius: 8px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      box-shadow: 0px 0px 350px 20px rgba(0, 0, 0, 0.5);
-      opacity: 1;
-      -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
-
-    .ver-controles-animation {
-      opacity: 1; /* Hacer visible */
-      animation: mostrar-controles 0.5s cubic-bezier(0,1,.58,1)
-        both;
-      z-index: 10;
-    }
-    .ocultar-controles-animation {
-      animation: ocultar-controles 0.5s cubic-bezier(0,1,.58,1)
-        both;
-        z-index: 10;
-    }
-
-    div.contenedor-padre {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 8px 12px 8px;
-      border-bottom: solid 1px black;
-    }
-    div.contenedor-padre:last-child {
-      border: none;
-    }
-    div.contenedor-key {
-      display: flex;
-      gap: 2px;
-    }
-    kbd {
-      display: flex;
-      box-sizing: border-box;
-      font-size: 0.9em;
-      background-color: rgba(13, 189, 27, 0.473);
-      border-radius: 8px;
-      padding: 0.5rem;
-      word-break: keep-all;
-      align-items: center;
-      font-family: inherit;
-      line-height: 1;
-    }
-  </style>
 </article>
+<style>
+  #boton-mostrar-controles {
+    top: 4rem;
+    left: 0.5rem;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    align-items: center;
+    border-radius: 6px;
+    color: rgba(0, 0, 0, 0.7);
+    border: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    text-decoration: none;
+    backdrop-filter: blur(10px);
+    &:hover {
+      color: black;
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+      text-decoration: underline;
+      text-decoration-thickness: 0.1em;
+      cursor: pointer;
+    }
+  }
+  a {
+    top: 0.5rem;
+    left: 0.5rem;
+    align-items: center;
+    font-weight: bold;
+    padding: 6px 14px;
+    border-radius: 6px;
+    color: var(--text-color);
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: box-shadow 0.3s ease;
+    text-decoration: none;
+    backdrop-filter: blur(10px);
+
+    &:hover {
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+      text-decoration: underline;
+      text-decoration-thickness: 0.1em;
+      cursor: pointer;
+    }
+  }
+
+  @keyframes mostrar-controles {
+    0% {
+      opacity: 0;
+
+      scale: 0.5;
+    }
+    100% {
+      opacity: 1; /* Cambia 100 a 1 */
+      scale: 1;
+    }
+  }
+  @keyframes ocultar-controles {
+    0% {
+      opacity: 1;
+      pointer-events: auto; /* Mantiene la interacción */
+    }
+    100% {
+      opacity: 0;
+      pointer-events: none; /* Evita interacción en estado oculto */
+      scale: 0;
+    }
+  }
+
+  #ver-controles {
+    opacity: 0; /* Oculto inicialmente */
+  }
+
+  /* Creamos un elemento after para el elemento ver controles para que la animación de la sombra sera mejor */
+  #ver-controles::after {
+    content: "";
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 350px 20px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+  .ver-controles-animation {
+    opacity: 1; /* Hacer visible */
+    animation: mostrar-controles 0.5s cubic-bezier(0, 1, 0.58, 1) both;
+    z-index: 10;
+  }
+  .ocultar-controles-animation {
+    animation: ocultar-controles 0.5s cubic-bezier(0, 1, 0.58, 1) both;
+    z-index: 10;
+  }
+
+  div.contenedor-padre {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 8px 12px 8px;
+    border-bottom: solid 1px black;
+  }
+  div.contenedor-padre:last-child {
+    border: none;
+  }
+  div.contenedor-key {
+    display: flex;
+    gap: 2px;
+  }
+  kbd {
+    display: flex;
+    box-sizing: border-box;
+    font-size: 0.9em;
+    background-color: rgba(13, 189, 27, 0.473);
+    border-radius: 8px;
+    padding: 0.5rem;
+    word-break: keep-all;
+    align-items: center;
+    font-family: inherit;
+    line-height: 1;
+  }
+</style>
 
 <script>
   const BOTON_MOSTRAR_CONTROLES = document.getElementById(
