Cambio en el elemento #ver-controles para arreglar su hitbox al cargar la página.

--- a/src/components/Ayuda_y_Controles.astro
+++ b/src/components/Ayuda_y_Controles.astro
@@ -13,7 +13,7 @@
 
   <section
     id="ver-controles"
-    class="z-[-1000] fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 origin-center bg-[#fbfbfe] gap-3 w-2/5 place-content-between justify-between font-bold border-2 border-black rounded-lg"
+    class="ocultar-controles-animation z-[-1000] fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 origin-center bg-[#fbfbfe] gap-3 w-2/5 place-content-between justify-between font-bold border-2 border-black rounded-lg"
   >
     <button
       id="ocultar-controles"
