Cambios mínimos en el 404.astro

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,18 +9,18 @@ import Layout from "../layouts/Layout.astro";
     <!-- Sección de texto -->
     <article class="text-center lg:text-left lg:w-1/2 mt-auto mb-auto">
       <h1 class="balance text-4xl lg:text-7xl font-bold">
-        404 - Recurso no encontrado
+        <font class="text-red-700 font-extrabold">404</font>
+        - Recurso no encontrado
       </h1>
         <p class="font-bold text-lg lg:text-2xl mt-4 lg:w-11/12">
-          La ruta especificada no es válida, por favor verifíquela o vuelva a el <a
-            class="font-bold text-2xl text-blue-600 underline underline-offset-3 decoration-[3px] transition-all inline-block rounded-lg hover:bg-blue-600 px-3 py-2 hover:text-white hover:shadow-xl"
+          La ruta especificada no apunta a ningún recurso<a 
+            class="font-bold text-2xl text-blue-600 underline underline-offset-3 decoration-[3px] transition-all inline-block rounded-lg hover:bg-blue-600 px-3 ml-1 py-2 hover:text-white hover:shadow-xl"
             href="/"
           >
-            Inicio
+            Volver
           </a>
         </p>
       </article>
-    </article>
 
     <!-- Imagen -->
     <div class="flex justify-center">
