--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,7 +1,7 @@
-/* Importante para que el loader quede centrado */
+/* Importante para que el loader quede centrado
 article .contenedor {
   display: flex;
-}
+} */
 
 /* LOADER */
 
