--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -71,8 +71,10 @@ import ControlCategorias from "./ControlCategorias.astro";
   #reloadButton img {
     height: 32px;
   }
-  
+
   .not-loaded {
     min-height: 500px;
+    grid-template-columns: 100%;
+    justify-items: center;
   }
 </style>
