--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -8,7 +8,6 @@ import Layout from "../layouts/Layout.astro";
       Agrega Tus Programas
     </h1>
 
-
     <form id="programForm">
       <div class="input-group">
         <input
@@ -131,7 +130,6 @@ import Layout from "../layouts/Layout.astro";
       .getElementById("programForm")
       .addEventListener("submit", async (event) => {
         event.preventDefault(); // Evitar que el formulario recargue la página
-        // console.log("me toquetearon 😊 (soy el formulario de programas)");
 
         const submitButton = document.getElementById("black-button");
         submitButton.disabled = true; // Deshabilita el botón para evitar múltiples envíos
@@ -147,13 +145,14 @@ import Layout from "../layouts/Layout.astro";
             submitButton.disabled = false; // Reactivar el botón
             return; // Detener la ejecución si las categorías son iguales
           }
-
           // Combinar las categorías si son diferentes
           categoriaSeleccionadaFinal = [
             `${categoriaSeleccionada[0]}, ${categoriaSeleccionada2[0]}`,
           ];
         }
-        console.log(categoriaSeleccionadaFinal);
+        else {
+          categoriaSeleccionadaFinal = categoriaSeleccionada
+        }
 
         // Obtener los valores del formulario (Inputs de nombre, imagen, descarga y detalles)
         const nombre = document.getElementById("nombre").value;
@@ -210,6 +209,7 @@ import Layout from "../layouts/Layout.astro";
           }
         }
 
+
         // ---------- PASO 4: Insertar datos en la base de datos ---------- //
         try {
           // console.log(`La categoría seleccionada es ${categoriaSeleccionada}`);
@@ -262,7 +262,6 @@ import Layout from "../layouts/Layout.astro";
       #ff1556
     );
   }
-
 
   main {
     display: flex;
