--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "geist";
-    src: url("/fonts/GeistVF.ttf");
+    src: url("/fonts/GeistVF.woff2");
   }
 
   * {
