--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
     >
-      Encuentra una variedad de recuros variados, desde script útiles hasta
+      Descarga una variedad de recursos, desde script útiles hasta
       aplicaciones completas con cracks. <span style="color: #008f39"
         >Comparte</span
       > tus propios recursos con los demás, aprovechando esta plataforma de todos
