--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,16 +20,16 @@ import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
     >
-      Encuentra una variedad de recuros variados, desde script útiles hasta
-      aplicaciones completas con cracks. <span style="color: #008f39"
-        >Comparte</span
-      > tus propios recursos con los demás, aprovechando esta plataforma de todos
-      para <span style="color: #094293">explorar</span> , <span
-        style="color: #a65e2e">obtener</span
-      > y
-      <span style="color: #4b0082">contribuir</span> tus <span
-        >recursos informáticos.</span
-      >
+      <span style="color: #0047aa">Explora</span>,
+      <span style="color: #008f39">Descarga</span>
+      y
+      <span style="color: #6200a8">Comparte</span>
+      recursos informáticos. Desde script básicos hasta software completo y crackeado.
+      <span style="color: #bd00aa">Aquí</span>
+      puedes
+      <span> conseguir y compartir </span>
+      con los 
+      <span>demás.</span>
     </p>
     <BotonesPrincipales />
     <ProgramasDestacados />
@@ -68,8 +68,7 @@ import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
   import cargarProgramas from "/js/CargarTodosLosProgramas.js";
 
   // Cargar todos los programas
-    cargarProgramas();
-
+  cargarProgramas();
 
   // Función para los controles de Soft Share
   // Control + Space = Buscar
