Pongo estilos para dejar claro que el botón de programas destacados aún no esta en funcuionamiento hasta que soft-share llegue a los 100 recursos

--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
   <main>
     <article>
       <h2 class="flex items-center font-bold text-center">
-        ¡Déjame un comentario! <img src="/piñata.png" class="size-10" alt="" />
+        ¡Déjame un comentario! <img src="emojis/piñata.webp" class="size-10" alt="" />
       </h2>
     </article>
 
