--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -9,9 +9,9 @@ import ControlCategorias from "./ControlCategorias.astro";
     <h2
       class="flex items-center font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center gap-1"
     >
-      Programas destacados <img
-        src="/corona.png"
-        class="size-10 relative bottom-1"
+      Todos los Programas<img
+        src="/emojis/rocket.webp"
+        class="size-10 relative bottom-1 left-1"
         alt=""
       />
     </h2>
