--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -1,5 +1,5 @@
 <nav class="flex flex-col gap-3 items-center lg:flex-row">
-  <a href="#Programs">Programas destacados 👑</a>
+  <a href="#" title="Para realizar esta funcionalidad primero necestiamos que soft-share llegue a los 100 recursos. Ayúdame a hacer esto posible 😝" class="proximamente">Programas destacados 👑</a>
   <a href="#todosLosProgramas" id="todosLosProgramas">Todos los programas🚀</a>
   <a href="#UploadProgram">Subir Programa</a>
 </nav>
@@ -23,7 +23,7 @@
     color: var(--text-color);
     background: #fff;
     border: none;
-    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -40,12 +40,46 @@
     margin-bottom: 4rem;
     display: flex;
     justify-content: space-around;
-    & a {
-      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
-      &:hover {
-        box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-      }
+
+  }
+
+  /* Proximamente */
+  .proximamente {
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-size: 0.9rem;
+    font-weight: bold;
+    padding: 6px 14px;
+    border-radius: 6px;
+    color: rgba(0, 0, 0, 0.5);
+    background: #ffffffe3;
+    border: none;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: box-shadow, color 0.3s ease;
+    text-decoration: none;
+
+    &:hover {
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.);
+      color: rgba(0, 0, 0, 0.3);
+      cursor: wait;
+      background: #ffffff77;
     }
+  }
+
+  .proximamente::before {
+    content: "🚧 Proximamente 🚧";
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 14px;
+    font-weight: 600;
+    color: #697488;
+    text-align: center;
+    white-space: nowrap;
   }
 </style>
