Se agrega una tilde a próximamente

--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -79,7 +79,7 @@
   }
 
   .proximamente::before {
-    content: "🚧 Proximamente 🚧";
+    content: "🚧 Próximamente 🚧";
     position: absolute;
     top: 25px;
     left: 50%;
