Cambio el estilo del cursor en el botón Programas Destacados 👑

--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -73,7 +73,7 @@
     &:hover {
       box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, .1);
       color: rgba(0, 0, 0, 0.3);
-      cursor: wait;
+      cursor: not-allowed;
       background: #ffffff77;
     }
   }
