--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -2,7 +2,12 @@
   <a
     href="#"
     title="Para realizar esta funcionalidad primero necestiamos que soft-share llegue a los 100 recursos. Ayúdame a hacer esto posible 😝"
-    class="proximamente gap-1">Programas destacados <img src="/emojis/corona.webp" class="size-5" alt="" /></a
+    class="proximamente gap-1"
+    >Programas destacados <img
+      src="/emojis/corona.webp"
+      class="size-5"
+      alt=""
+    /></a
   >
   <a href="#todosLosProgramas" id="todosLosProgramas" class="gap-1"
     >Todos los programas
@@ -30,7 +35,7 @@
     color: var(--text-color);
     background: #fff;
     border: none;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, .2);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -38,7 +43,7 @@
     text-decoration: none;
 
     &:hover {
-      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, .2);
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.2);
       cursor: pointer;
     }
   }
@@ -53,7 +58,7 @@
   .proximamente {
     display: flex;
     align-items: center;
-    position: relative;    
+    position: relative;
     font-size: 0.9rem;
     font-weight: bold;
     padding: 6px 14px;
@@ -61,7 +66,7 @@
     color: rgba(0, 0, 0, 0.5);
     background: #ffffffe3;
     border: none;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, .2);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -71,7 +76,7 @@
     text-decoration: none;
 
     &:hover {
-      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, .1);
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
       color: rgba(0, 0, 0, 0.3);
       cursor: not-allowed;
       background: #ffffff77;
@@ -89,5 +94,11 @@
     color: #697488;
     text-align: center;
     white-space: nowrap;
+    transition: all 0.3s ease;
+  }
+  .proximamente:hover::before {
+    top: 5px;
+    font-size: 16px;
+    backdrop-filter: blur(5px);
   }
 </style>
