Mejor estructuración de iconos y optimización

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -5,7 +5,7 @@
   <button
     class="flex justify-center place-items-center items-center mb-2 bg-slate-400/20 py-1 rounded-md gap-1 group ver-mas"
     >Selecciona las Categorías <img
-      src="/css/click.png"
+      src="/assets/click.webp"
       class="size-8 group-hover:rotate-12 transition-all transition-duration-150"
       alt="click"
     /></button
