--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -3,7 +3,7 @@ import BotonBuscar from "./BotonBuscar.astro";
 import ControlCategorias from "./ControlCategorias.astro";
 ---
 
-<button id="reloadButton"><img src="reload.svg" alt="" /></button>
+<button id="reloadButton"><img src="assets/reload.svg" alt="" /></button>
 <article>
   <header class="flex flex-col gap-y-4 lg:flex-row mb-6">
     <h2
