--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -60,7 +60,7 @@ import Layout from "../layouts/Layout.astro";
           target="_blank"
           no-referrer
           title="Si quieres saber que representa cada categoría, dame click 😺"
-          ><img src="/info.svg" alt="info" class="size-5" /></a
+          ><img src="assets/info.svg" alt="info" class="size-5" /></a
         >
         <h3 class="flex items-center">Categoría</h3>
         <!-- The second value will be selected initially -->
