--- a/src/components/BotonBuscar.astro
+++ b/src/components/BotonBuscar.astro
@@ -1,7 +1,7 @@
 <div class="container">
   <input type="text" placeholder="" id="input" class="widthInput max-w-[80%]" />
   <div class="btn" id="btn">
-    <img src="search.svg" id="imgS" alt="Imagen de binoculares" />
+    <img src="assets/search.svg" id="imgS" alt="Imagen de binoculares" />
   </div>
 </div>
 
