--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -27,8 +27,8 @@ import Layout from "../layouts/Layout.astro";
       <img
         width="300"
         height="300"
-        src="/joe.webp"
-        alt="banana bailando"
+        src="/assets/joe.webp"
+        alt="Joe banana"
         class="object-cover w-64 h-64 md:w-80 md:h-80 lg:w-96 lg:h-96 aspect-square rounded-2xl shadow-2xl rotate-3 hover:rotate-12 transition-all border-4 border-white"
         style="object-position: 50% 50%"
       />
